# data_collection

./: .coverage  .env  .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT_GUIDE.md  Dockerfile  GPU_MAPPING_INTEGRATION_REPORT.md  GPU_TASK_INFO_INTEGRATION.md  GPU_TREND_VISUALIZATION_GUIDE.md  GPU_VISUALIZATION_GUIDE.md  LABEL_OVERLAP_FIX.md  LICENSE  MANAGEMENT_API_SETUP.md  README.md  README_UPDATE_SUMMARY.md  README_new.md  REFACTORING_GUIDE.md  REFACTOR_COMPLETE.md  REFACTOR_COMPLETION_REPORT.md  SHELL_SCRIPT_REFACTORING_COMPLETE.md  STACKED_VIEW_GUIDE.md  TODO.md  UPDATE_SUMMARY_STACKED_VIEW.md  USER_DISPLAY_CONTROL_COMPLETE_REPORT.md  USER_DISPLAY_CONTROL_GUIDE.md  USER_GPU_QUERY_GUIDE.md  USER_INFO_GUIDE.md  VISUALIZATION_QUICK_START.md  VISUALIZATION_REFACTOR_SUMMARY.md  VRAM_FEATURES.md  VRAM_SHOW_USERS_GUIDE.md  VRAM_STACKED_FIX_REPORT.md  VRAM_STACKED_VIEW_GUIDE.md  VRAM_USER_LABELS_REPORT.md  batch_collect_users.sh  colab_gpu_stats.sh  colab_gpu_stats_2025-10-26_to_2025-10-28.csv  coverage.xml  debug_fonts.py  (+33 more)
.github/: copilot-instructions.md  copilot-instructions_bk.md
.github/prompts/: LINUS_PROMPTS.prompt.md
examples/: gpu_trend_examples.py  gpu_visualization_examples.py
legacy/visualization_original/: font_config.py  requirements.txt  run_viz.sh  vram_monitor.py
python/: COMPARISON.md  README.md  SUMMARY.md  daily_gpu_log.py  run_daily_gpu_log.sh  test_gpu_collector.py
scripts/: advanced_gpu_trend_analyzer.py  archive_data.py  archive_monthly.py  calculate_gpu_range.sh  calculate_node_gpu_usage.sh  calculate_total_average.sh  daily_gpu_log.sh  daily_gpu_log_with_users.sh  gpu_trend_visualizer.py  quick_gpu_plots.py  quick_gpu_trend_plots.py  zip_archives.py
scripts/test/: admin_data.json  gpu_hardwre_mapping.txt  itrd_data.json  test.csv  test.sh  time_convert.sh  user_data.json
src/: __init__.py  __main__.py  simple_collector.py
src/cli/: __init__.py  main.py
src/cli/commands/: __init__.py  collect.py  query.py  visualize.py
src/core/: __init__.py
src/core/collectors/: __init__.py  base_collector.py  management_collector.py  netdata_collector.py
src/core/models/: __init__.py  gpu.py  node.py  user.py
src/core/services/: __init__.py  daily_export_service.py  data_collection_service.py  data_processing_service.py
src/infrastructure/: __init__.py
src/infrastructure/config/: __init__.py  settings.py
src/tools/: __init__.py  advanced_visualizer.py  daily_collector.py
src/visualization/: __init__.py  font_utils.py  main.py  plotter.py
test_cases/: README.md  chart_verification.py  final_verification.py  run_all_tests.py  test_chinese_font.py  test_csv_timezone.py  test_gpu_mapping.py  test_gpu_task_info.py  test_heatmap_users.py  test_summary_report.py  test_taiwan_timezone.py  test_timezone_complete.py  test_user_column.py  test_user_info.py  test_vram_users.py
tests/: conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_config.py
visualization/: README.md  advanced_gpu_trend_analyzer.py  final_verification.py  font_config.py  gpu_trend_examples.py  gpu_trend_visualizer.py  quick_gpu_trend_plots.py  test_fonts.py  test_heatmap_users.py  vram_monitor.py
