[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "amd-gpu-monitor"
version = "3.0.0"
description = "AMD GPU 監控與視覺化系統 - 重構版本"
authors = ["AMD GPU Monitor Team <amd-gpu-monitor@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/anitawuitri/data_collection"
repository = "https://github.com/anitawuitri/data_collection"
documentation = "https://github.com/anitawuitri/data_collection/blob/main/README.md"
keywords = ["amd", "gpu", "monitoring", "visualization", "netdata"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: Scientific/Engineering :: Visualization"
]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
aiohttp = "^3.8.0"
python-dotenv = "^1.0.0"
asyncio-mqtt = {version = "^0.16.0", optional = true}

# 視覺化依賴 (可選)
matplotlib = {version = "^3.7.0", optional = true}
seaborn = {version = "^0.12.0", optional = true}

# 快取支援 (可選)
redis = {version = "^4.5.0", extras = ["hiredis"], optional = true}

# 依賴注入 (可選)
dependency-injector = {version = "^4.41.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
pre-commit = "^3.3.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.0"
mkdocs-material = "^9.1.0"
mkdocs-click = "^0.8.0"

[tool.poetry.extras]
visualization = ["matplotlib", "seaborn"]
cache = ["redis"]
di = ["dependency-injector"] 
mqtt = ["asyncio-mqtt"]
full = ["matplotlib", "seaborn", "redis", "dependency-injector", "asyncio-mqtt"]

[tool.poetry.scripts]
gpu-monitor = "src.cli.main:main"
amd-gpu-collect = "src.cli.main:main"

# 工具配置
[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | legacy
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
known_first_party = ["src"]
known_third_party = ["click", "pandas", "numpy", "aiohttp", "matplotlib", "seaborn"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "seaborn.*",
    "pandas.*",
    "numpy.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "gpu_required: marks tests that require GPU hardware"
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/conftest.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "E501", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "old",
    "build",
    "dist",
    ".venv",
    ".eggs",
    "*.egg"
]